new display mode: lines
[imported from CVS by cvs2p4 at 2003/11/15 23:23:15]

[git-p4: depot-paths = "//depot/wmnd/main/": change = 50]

--- a/NEWS
+++ b/NEWS
@@ -22,7 +22,8 @@ WMND 0.4.4
 	ChangeLog directly from the repository. Old entries are moved
 	to the ChangeLog.0 file.
 	* The linux_proc driver can be forced to monitor devices that
-	actually are offline (usefull for ppp interfaces).
+	actually are offline (useful for ppp interfaces).
+	* New display mode: lines (trend-like behavior)
 
 WMND 0.4.3
 ----------------------------------------------------------------------
