a good value for smooth is 0.1, not 0.01.
[imported from CVS by cvs2p4 at 2003/11/15 23:23:15]

[git-p4: depot-paths = "//depot/wmnd/main/": change = 60]

--- a/NEWS
+++ b/NEWS
@@ -26,8 +26,9 @@ WMND 0.4.4
 	* New display mode: lines (trend-like behavior). Mainly useful
 	with a low smoothing factor and a fast scroll speed.
         * Added the smoothing factor thing to clear-up the graph while using a
-	fast scroll speed and the lines mode. Read the README for more
+	fast scroll speed and the lines mode. Read the docs for more
 	informations.
+	* Fixed average sampling (-S) for multiple devices and values != 1
 
 WMND 0.4.3
 ----------------------------------------------------------------------
