--- a/doc/wmnd.1
+++ b/doc/wmnd.1
@@ -101,6 +101,9 @@ Show version of \fBWMND\fP.
 .B \-q
 be less verbose (display only errors).
 .TP
+.B \-Q
+show informational messages.
+.TP
 .BI "\-o " float
 smoothing factor (a float from 0 to 1).
 .SH USAGE
