driver subsystem lacks of flexibility
[imported from CVS by cvs2p4 at 2003/11/15 23:23:15]

[git-p4: depot-paths = "//depot/wmnd/main/": change = 73]

--- a/TODO
+++ b/TODO
@@ -6,6 +6,8 @@ planned features:
 	multiple times.
 	* wave++: per-interface options (long names, etc)
 	* wave++: per-display options (scroll speed, etc)
+	* wave++: the driver subsystem really needs a rewrite to support
+	these new concepts.
 
 completed since release 0.4.3:
 
