added infos about testing_dummy
[imported from CVS by cvs2p4 at 2003/11/15 23:23:15]

[git-p4: depot-paths = "//depot/wmnd/main/": change = 76]

--- a/doc/wmnd.1
+++ b/doc/wmnd.1
@@ -157,6 +157,11 @@ Gather all devices of class net from the kstat library.
 .B irix_pcp
 Reads metrics from the IRIX Performance Co-Pilot daemon. Read
 the README for problems with this driver.
+.TP
+.B testing_dummy
+This is the "last resort" driver, it shows a null device useful only
+to make \fBWMND\fP don't exit when all other drivers failed. Can be
+enchanged to display something at compile time.
 .SH FILES
 ~/.wmndrc	User configuration.
 .PP
