changed the revision number to 4a
[imported from CVS by cvs2p4 at 2003/11/15 23:23:15]

[git-p4: depot-paths = "//depot/wmnd/main/": change = 82]

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+WMND 0.4.4a
+----------------------------------------------------------------------
+
+	* Fixed a bug into the solaris_fpppd driver (won't compile).
+
 WMND 0.4.4
 ----------------------------------------------------------------------
 
