--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 WMND - Window Maker Network Devices
 ----------------------------------------------------------------------
-Web site: http://www.wingeer.org/wmnd/
-Mirror: http://www.hydra.ubiest.com/wmnd/
+Original web site: http://www.wingeer.org/wmnd/
+Current development: http://www.yuv.info/wmnd/
 Author: Reed Lai <reed@wingeer.org> http://www.wingeer.org/bv4qo/
 
 
