--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+WMND 0.4.5
+----------------------------------------------------------------------
+
+	* Added a new IF-MIB snmp driver! You can now monitor local
+	and remote snmp interfaces a-la MRTG, but in realtime! Read
+	CAREFULLY the README about issues with this driver.
+
 WMND 0.4.4a
 ----------------------------------------------------------------------
 
