Some packager's notes.
[imported from CVS by cvs2p4 at 2003/11/15 23:23:15]

[git-p4: depot-paths = "//depot/wmnd/main/": change = 117]

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ WMND 0.4.5
 	* Added a new IF-MIB snmp driver! You can now monitor local
 	and remote snmp interfaces a-la MRTG, but in realtime! Read
 	CAREFULLY the README about issues with this driver.
+	* Some packaging 'hints' into the README.
 
 WMND 0.4.4a
 ----------------------------------------------------------------------
