notes about sine-dummy.
[imported from CVS by cvs2p4 at 2003/11/15 23:23:15]

[git-p4: depot-paths = "//depot/wmnd/main/": change = 120]

--- a/README
+++ b/README
@@ -383,3 +383,5 @@ three different packages of WMND, respectively:
  - wmnd: standard WMND, built without generic drivers
    (actually only irix_pcp and generic_snmp)
 
+Finally, --enable-sine-dummy should be really a default :).
+
