Descriptive issues about ifDescr/ifName (generic_snmp).
[imported from CVS by cvs2p4 at 2003/11/15 23:23:15]

[git-p4: depot-paths = "//depot/wmnd/main/": change = 178]

--- a/README
+++ b/README
@@ -351,6 +351,11 @@ Also beware that using the -I flag on the command-line can potentially
 expose the community name of your remote snmp server. Better to use
 ~/.wmndrc and chmod it to 600 in this case.
 
+WMND will use ifName to display interface names, which is usually
+shorter. DLINK switches seems to hang (or even flood the network) with
+this, so you can switch back to ifDescr using the --enable-snmp-descr
+option at the configure command line.
+
 Personal note: this driver shows both the potential and the side
 effects of the current driver layout. You can make drivers for almost
 anything, but as you need initialization parameters, you'll loose the
