News about WMND 0.4.6.
[imported from CVS by cvs2p4 at 2003/11/15 23:23:15]

[git-p4: depot-paths = "//depot/wmnd/main/": change = 179]

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+WMND 0.4.6
+----------------------------------------------------------------------
+
+	* Fixed a typo in the configure script that could cause some
+	shells to interrupt the configuration.
+	* generic_snmp will now use ifName instead of ifDescr, which
+	is usually shorter. Again, issues in the README.
+
 WMND 0.4.5
 ----------------------------------------------------------------------
 
