Some notes about the driver subsystem.
[imported from CVS by cvs2p4 at 2003/11/15 23:23:15]

[git-p4: depot-paths = "//depot/wmnd/main/": change = 191]

--- a/TODO
+++ b/TODO
@@ -8,6 +8,8 @@ planned features:
 	* wave++: per-display options (scroll speed, etc)
 	* wave++: the driver subsystem really needs a rewrite to support
 	these new concepts.
+	* wave++: snmp driver could use a single session instance. I need
+	per-driver termination handlers.
 
 completed since release 0.4.3:
 
