--- a/doc/wmnd.1
+++ b/doc/wmnd.1
@@ -99,13 +99,17 @@ Show summary of options.
 Show version of \fBWMND\fP.
 .TP
 .B \-q
-be less verbose (display only errors).
+Be less verbose (display only errors).
 .TP
 .B \-Q
-show informational messages.
+Show informational messages.
 .TP
 .BI "\-o " float
-smoothing factor (a float from 0 to 1).
+Smoothing factor (a float from 0 to 1).
+.TP
+.BI "\-n " name
+Change the \fBWMND\fP class/title name (defaults to "wmnd").
+
 .SH USAGE
 .SS Active Interface
 You can cycle in realtime through all available active interfaces
@@ -186,34 +190,34 @@ The format of this file is:
 .IP
 # WMND configuration file
 .IP
-# middle line in wave mode color
+# middle line color in wave mode
 md_color=#71e371
 .IP
-# RX/TX color (can be #xxxxxx, or color name from rgb.txt)
+# RX/TX color (can be #xxxxxx, or a valid color name from rgb.txt)
 rx_color=#188a86
 tx_color=#00fff2
 .IP
-# refresh between status polling (not graph scroll speed)
-# numbering in nanoseconds
+# refresh between status polling (not graph scroll speed: this affects
+# the speed of those flashing arrows)
+# numbering in microseconds
 refresh=50000
 .IP
-# bar graph scroll speed (in tenths of seconds) this setting
-# also affects the rate and max speed displays.  the longer
-# the delay, more inaccurate these are since the max and
-# rate values are averaged across this interval
-scroll=1
+# graph scroll speed (in tenth of seconds). This setting affects
+# the rate and max speed displays. setting a longer the delay will
+# average real values within this interval
+scroll=10
 .IP
-# average sampling for the speed display at the bottom of the
-# pixmap. this is the number of times to wait (in terms of
-# scrolling steps) before displaying the average speed of
-# that period. The time of the period can be calculated (in
-# tenth of seconds) with: scroll * avg_steps
+# average sampling for the speed display at the bottom of the pixmap.
+# this is the number of times to wait (in terms of scrolling steps) before
+# displaying the average speed of that period. The time of the period can
+# be calculated (in tenth of seconds) with: scroll * avg_steps.
 avg_steps=1
 .IP
 # smooth: smoothing factor. A float value ranging from 0 to 1. This is
 # really the "amount" of the new speed against the history each time is
 # sampled from the device. A low value (0.1) will remove random spikes
-# from the graph. Values higher that 1 will instead enchange spikes.
+# from the graph. Values higher than 1 will instead enchange spikes. Only
+# the 'bytes' mode is affected by this switch.
 # Disabled by default (0).
 smooth=0
 .IP
@@ -229,6 +233,7 @@ binary_scale=no
 display_time=yes
 .IP
 # use a specific driver (driver name, %auto for automatic)
+# See -h for a list of available drivers.
 driver=%auto
 .IP
 # Driver's interface to monitor (interface name, %any for all).
@@ -241,8 +246,8 @@ driver=%auto
 # generic_snmp: [community@]host[:interface number]
 driver_interface=%any
 .IP
-# automatically select and show the interface on startup
-# if avaible (interface name, %first for first avaible)
+# automatically select and show this interface on startup if
+# available (interface name, %first for the first one)
 interface_name=%first
 .IP
 # Show max values (yes, no)
@@ -251,14 +256,20 @@ show_max_values=yes
 # Use long interface names (yes, no)
 use_long_names=no
 .IP
-# Max values through entire history
+# max values through entire history instead of through the last ~50 samples
 use_max_history=no
 .IP
-# Wave mode (traditional, waveform, wmnet, ...)
+# display mode (traditional, waveform, wmnet, ...).
+# See -h for a list of available modes.
 wave_mode=wmnet
 .IP
 # be less verbose (display only errors)
 # quiet=yes
+.IP
+# change the WMND's class/title name. this is useful under wharf (afterstep)
+# to not swallow multiple WMND instances into a single dock. Defaults
+# to "wmnd".
+# name=wmnd
 .fi
 .SH SIGNALS
 .TP
