--- a/TODO
+++ b/TODO
@@ -10,6 +10,8 @@ planned features:
 	these new concepts.
 	* wave++: snmp driver could use a single session instance. I need
 	per-driver termination handlers.
+	* Jeff Greenfield: graph logarithmic scale.
+	* Jeff Greenfield: fixed graph scale.
 
 completed since release 0.4.3:
 
