Changed the link to the original Reed site (avoid the redirection).
[imported from CVS by cvs2p4 at 2003/11/15 23:23:15]

[git-p4: depot-paths = "//depot/wmnd/main/": change = 220]

--- a/AUTHORS
+++ b/AUTHORS
@@ -10,7 +10,7 @@ Arthur Korn <arthur@korn.ch>
 
 Michael Leuchtenburg <dyfrgi@wingeer.org> http://otter.yi.org/ 
 
-	* Web site administration: http://www.wingeer.org/wmnd/
+	* Web site administration: http://wmnd.wingeer.org/
 	* English refinement of articles
 
 Paul van Tilburg (Mozillion) http://www.utopiamoo.net/
