Old release transition notes.
[imported from CVS by cvs2p4 at 2003/11/15 23:23:15]

[git-p4: depot-paths = "//depot/wmnd/main/": change = 222]

--- a/README
+++ b/README
@@ -104,6 +104,12 @@ restart the drivers subsystem. Drivers must be coded correctly to
 support a 'real' restart, thus the only driver that does 'something'
 on restart is the solaris_kstat one.
 
+-- Transition from 0.2/0.3 -------------------------------------------
+If you are coming from an old release of WMND (0.2/0.3 series) you
+must be aware that some values/scales of the ~/.wmndrc file have
+changed. Copy a fresh wmndrc from the source distribution
+(examples/wmndrc) or erase your old wmndrc to get the new defaults.
+
 
 Window Managers
 ----------------------------------------------------------------------
