--- a/doc/wmnd.1
+++ b/doc/wmnd.1
@@ -6,7 +6,7 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.TH WMND 1 "Jul 1, 2002"
+.TH WMND 1 "Apr 10, 2004"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -36,7 +36,10 @@ mouse clicks.
 Select the interface to start with.
 .TP
 .BI "\-I " interface
-Interfaces to monitor. Defaults to all but lo and irda.
+Interface/s to monitor. Defaults to all but lo and irda. Under linux
+(using the linux_proc driver, you can specify multiple interfaces
+separated by commas to force offline ones and combine them into
+a single instance).
 .TP
 .BI "\-D " driver
 Specify a driver to use. Defaults to auto-probe.
@@ -185,92 +188,8 @@ enchanged to display something at compile time.
 .SH FILES
 ~/.wmndrc	User configuration.
 .PP
-The format of this file is:
-.nf
-.IP
-# WMND configuration file
-.IP
-# middle line color in wave mode
-md_color=#71e371
-.IP
-# RX/TX color (can be #xxxxxx, or a valid color name from rgb.txt)
-rx_color=#188a86
-tx_color=#00fff2
-.IP
-# refresh between status polling (not graph scroll speed: this affects
-# the speed of those flashing arrows)
-# numbering in microseconds
-refresh=50000
-.IP
-# graph scroll speed (in tenth of seconds). This setting affects
-# the rate and max speed displays. setting a longer the delay will
-# average real values within this interval
-scroll=10
-.IP
-# average sampling for the speed display at the bottom of the pixmap.
-# this is the number of times to wait (in terms of scrolling steps) before
-# displaying the average speed of that period. The time of the period can
-# be calculated (in tenth of seconds) with: scroll * avg_steps.
-avg_steps=1
-.IP
-# smooth: smoothing factor. A float value ranging from 0 to 1. This is
-# really the "amount" of the new speed against the history each time is
-# sampled from the device. A low value (0.1) will remove random spikes
-# from the graph. Values higher than 1 will instead enchange spikes. Only
-# the 'bytes' mode is affected by this switch.
-# Disabled by default (0).
-smooth=0
-.IP
-# buttons for user scripts
-# bt1_action=su -c ethereal
-# bt2_action=
-# bt3_action=
-.IP
-# respects the -b in command line (yes, no)
-binary_scale=no
-.IP
-# display or not the device uptime (yes, no)
-display_time=yes
-.IP
-# use a specific driver (driver name, %auto for automatic)
-# See -h for a list of available drivers.
-driver=%auto
-.IP
-# Driver's interface to monitor (interface name, %any for all).
-# This is actually a parameter to the driver, and may have different
-# meanings on different drivers.
-#
-# linux_proc, freebsd_sysctl, solaris_kstat, solaris_fpppd: a simple
-#   interface name on the current host.
-# irix_pcp: [host@]interface
-# generic_snmp: [community@]host[:interface number]
-driver_interface=%any
-.IP
-# automatically select and show this interface on startup if
-# available (interface name, %first for the first one)
-interface_name=%first
-.IP
-# Show max values (yes, no)
-show_max_values=yes
-.IP
-# Use long interface names (yes, no)
-use_long_names=no
-.IP
-# max values through entire history instead of through the last ~50 samples
-use_max_history=no
-.IP
-# display mode (traditional, waveform, wmnet, ...).
-# See -h for a list of available modes.
-wave_mode=wmnet
-.IP
-# be less verbose (display only errors)
-# quiet=yes
-.IP
-# change the WMND's class/title name. this is useful under wharf (afterstep)
-# to not swallow multiple WMND instances into a single dock. Defaults
-# to "wmnd".
-# name=wmnd
-.fi
+The format of this file is described in the example file "wmndrc"
+coming with the distribution (see \fI/usr/share/doc/wmnd/\fP).
 .SH SIGNALS
 .TP
 .B SIGUSR1
@@ -281,7 +200,9 @@ programming/testing purposes).
 Clean WMND shutdown.
 .SH BUGS
 Report bugs and suggestion to the current \fBWMND\fR maintainer:
-Wave++ <wavexx@users.sf.net>
+wave++ <wavexx@users.sf.net>. More informations (including usage
+instructions) can be found into the README file found into the
+distribution. These informations should be integrated here too.
 .SH SEE ALSO
 .BR X (3x),
 .BR wmaker (1x).
