--- a/doc/wmnd.1
+++ b/doc/wmnd.1
@@ -117,7 +117,7 @@ Change the \fBWMND\fP class/title name (defaults to "wmnd").
 .SS Active Interface
 You can cycle in realtime through all available active interfaces
 by simply left-clicking on the interface name gadget on the
-upperleft corner of \fBWMND\fP.
+upperleft corner of \fBWMND\fP or use the mouse wheel.
 .PP
 The 'lo' interface is an exception, 'lo' only works when invoked
 from the commandline (\fBwmnd \-I lo\fP), lo was mainly built in for
